[package]
name = "file-locker"
version = "0.1.2"
authors = ["Jonathan LEI <me@xjonathan.dev>"]
edition = "2021"
description = "A simple AES-based file encryptor/decryptor"

[dependencies]
aes = "0.8.2"
cbc = { version = "0.1.2", features = ["alloc"] }
clap = { version = "4.0.32", features = ["derive"] }
getrandom = "0.2.8"
rpassword = "7.2.0"
sha2 = "0.10.6"
tempfile = "3.3.0"
